# VISTA

./: dev_setup.py  pyproject.toml  requirements.txt
Notebooks/: 02_variantobject.ipynb  03_inputparser.ipynb  04_clinvar.ipynb  05_pubmed.ipynb  06_normalizer.ipynb  07_predictionscores.ipynb  08_acmgengine.ipynb  10_reportgeneration.ipynb  11_intake.ipynb  12_classifier.ipynb  13_engine.ipynb
api/: main.py  models.py
docs/: API_SOURCES.md
frontend/: index.html  package-lock.json
frontend/src/: index.css  main.tsx
frontend/src/components/: InputField.tsx  LoadingCard.tsx  ResultCard.tsx  SelectField.tsx  VariantForm.tsx
frontend/src/components/layout/: Sidebar.tsx
frontend/src/pages/: Analyze.tsx  Home.tsx
frontend/src/services/: api.ts
src/vista/: acmg.py  classifier.py  clinvar.py  engine.py  gnomad.py  intake.py  normalizer.py  parser.py  phenotypes.py  predictions.py  pubmed.py  report.py  variant.py
src/vista.egg-info/: PKG-INFO  SOURCES.txt
src/vista/services/: cadd.py  ensebl.py  myvariant.py
tests/: conftest.py  test_acmg.py  test_classifier.py  test_engine.py  test_ensembl.py  test_normalizer.py  test_report.py  test_variant.py
